# ls02a_driver_ros

./: CMakeLists.txt  README.md  package.xml
include/: ls02a_lidar.h
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/line_laser_ros/lib/line_laser_ros/: create_udev_rules.sh  n301n_serial_publisher
install/line_laser_ros/share/ament_index/resource_index/package_run_dependencies/: line_laser_ros
install/line_laser_ros/share/line_laser_ros/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/line_laser_ros/share/line_laser_ros/cmake/: line_laser_rosConfig.cmake
install/line_laser_ros/share/line_laser_ros/launch/: laser.rviz  line_laser_half_deg.launch.py
install/line_laser_ros/share/line_laser_ros/udev/: 99-laser.rules
launch/: line_laser_half_deg_no_rviz.launch.py
log/: latest_build  lidar_data_20250526_102120.csv  lidar_data_20250526_102210.csv  lidar_data_20250526_155111.csv
scripts/: 99-laser.rules  create_udev_rules.sh  delete_udev_rules.sh
src/: lidar_processor.cpp  ls02a_lidar.cpp  ls02a_publisher.cpp
