<?xml version="1.0"?>
<package format="3">
  <name>line_laser_ros</name>
  <version>0.0.0</version>
  <description>ROS 2 package for line laser LiDAR</description>
  <maintainer email="nguyenphungduc1807@gmail.com">Nguyen Phung Duc</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>boost</depend>
  <depend>rcpputils</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>