<?xml version="1.0"?>
<package format="3">
  <name>line_laser_ros</name>
  <version>0.1.0</version>
  <description>The n301n_lidar_driver_serial.</description>
  <maintainer email="your_email@example.com">Yan</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>libboost-system-dev</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
